--- a/main.css
+++ b/main.css
@@ -1,6 +1,8 @@
 *, *::before, *::after {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  text-decoration: none;
+  color: #fff;
 }
 
 body {
@@ -8,42 +10,55 @@ body {
   padding: 0;
   font-family: 'Lato', sans-serif;
   background-color: #082333;
-  color: #001F3F;
+  color: #D5DCE0;
 }
 
-#navbar {
+#wrapper-nav {
   width: 100%;
-  background-color: black;
-  padding: 16px;
-  color: white;
-  text-align: right;
-  top: 0px;
+  background-color: #082333;
+  top: 0;
   position: fixed;
+  z-index: 2;
 }
 
-#navbar a {
-  color: white;
-  padding: 28px;
+#wrapper-nav #navbar {
+  width: 100%;
+}
+
+#wrapper-nav #navbar ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+#wrapper-nav #navbar ul li {
+  list-style: none;
+  padding: 4px 16px 4px 8px;
+}
+
+#wrapper-nav #navbar ul li a {
   text-decoration: none;
+  font-weight: 700;
+  color: #D5DCE0;
 }
 
 #welcome-section {
-  width: 100%;
+  margin-top: 60px;
+  padding: 16px;
+  text-align: center;
   height: 100vh;
-  background-color: #082333 h1;
-  background-color-margin-top: 80px;
-  background-color-text-align: center;
 }
 
 #projects {
-  width: 100%;
+  background-color: #F5F5F5;
   height: 100vh;
-  background-color: #EFF3F5;
 }
 
 #contact {
-  width: 100%;
+  background-color: green;
   height: 100vh;
-  background-color: #082333;
 }
 /*# sourceMappingURL=main.css.map */
