--- a/main.scss
+++ b/main.scss
@@ -1,44 +1,56 @@
 *, *::before, *::after {
-            box-sizing: border-box;
+        box-sizing: border-box;
+        text-decoration: none;
+        color:#fff;
   } 
 body{
     margin: 0;
     padding: 0;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Lato', sans-serif; 
     background-color: #082333;
-    color: #001F3F;
+    color: #D5DCE0;
 }
 
-#navbar{
+#wrapper-nav{
     width: 100%;
-    background-color: black;
-    padding: 16px;
-    color: white;
-    text-align: right;
-    top: 0px;
+    background-color: #082333;
+    top: 0;
     position: fixed;
-    a{
-        color:white;
-        padding: 28px;
-        text-decoration: none;
+    z-index: 2;
+    #navbar{
+        width: 100%;
+        ul{
+            display: flex;
+            justify-content: flex-end;
+            i{
+                list-style: none;
+                padding: 4px 16px 4px 8px;
+                a{
+                    text-decoration: none;
+                    font-weight: 700;
+                    color: #D5DCE0;
+                }
+            }
+        }
     }
 }
+
 #welcome-section{
-    width: 100%;
+    margin-top: 60px;
+    padding: 16px;
+    text-align: center;
     height: 100vh;
-    background-color: #082333
     h1{
-        margin-top: 80px;
-        text-align: center;
+      
     }
 }
 #projects{
-    width: 100%;
-    height: 100vh;
-    background-color: #EFF3F5;
+    background-color: #F5F5F5;
+    height:100vh;
+
 }
 #contact{
-    width: 100%;
+    background-color: green;
     height: 100vh;
-    background-color: #082333;
+
 }
