--- a/main.css
+++ b/main.css
@@ -1,3 +1,164 @@
+/* CSS Normalize */
+article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {
+  display: block;
+}
+
+audio, canvas, video {
+  display: inline-block;
+}
+
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+[hidden] {
+  display: none;
+}
+
+html {
+  font-family: sans-serif;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+
+a:focus {
+  outline: thin dotted;
+}
+
+a:active, a:hover {
+  outline: 0;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+abbr[title] {
+  border-bottom: 1px dotted;
+}
+
+b, strong {
+  font-weight: 700;
+}
+
+dfn {
+  font-style: italic;
+}
+
+mark {
+  background: #ff0;
+  color: #000;
+}
+
+code, kbd, pre, samp {
+  font-family: monospace, serif;
+  font-size: 1em;
+}
+
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+q {
+  quotes: \201C \201D \2018 \2019;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub, sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sup {
+  top: -.5em;
+}
+
+sub {
+  bottom: -.25em;
+}
+
+img {
+  border: 0;
+}
+
+svg:not(:root) {
+  overflow: hidden;
+}
+
+fieldset {
+  border: 1px solid silver;
+  margin: 0 2px;
+  padding: .35em .625em .75em;
+}
+
+button, input, select, textarea {
+  font-family: inherit;
+  font-size: 100%;
+  margin: 0;
+}
+
+button, input {
+  line-height: normal;
+}
+
+button, html input[type=button],
+input[type=reset], input[type=submit] {
+  -webkit-appearance: button;
+  cursor: pointer;
+}
+
+button[disabled], input[disabled] {
+  cursor: default;
+}
+
+input[type=checkbox], input[type=radio] {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+}
+
+input[type=search] {
+  -webkit-appearance: textfield;
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
+}
+
+input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+textarea {
+  overflow: auto;
+  vertical-align: top;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+body, figure {
+  margin: 0;
+}
+
+legend, button::-moz-focus-inner, input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+/* Box-sizing border-box */
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 *, *::before, *::after {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -13,33 +174,35 @@ body {
   color: #D5DCE0;
 }
 
-#wrapper-nav {
-  width: 100%;
-  background-color: #082333;
-  top: 0;
-  position: fixed;
-  z-index: 2;
-}
-
-#wrapper-nav #navbar {
-  width: 100%;
-}
-
-#wrapper-nav #navbar ul {
+#navbar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  width: 100%;
+  background-color: #082333;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  z-index: 2;
+  top: 0;
+  position: fixed;
 }
 
-#wrapper-nav #navbar ul li {
+#navbar ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#navbar ul li {
   list-style: none;
   padding: 4px 16px 4px 8px;
 }
 
-#wrapper-nav #navbar ul li a {
+#navbar ul li a {
   text-decoration: none;
   font-weight: 700;
   color: #D5DCE0;
@@ -48,7 +211,7 @@ body {
 #welcome-section {
   padding: 16px;
   text-align: center;
-  height: 100%;
+  height: 100vh;
 }
 
 #welcome-section h1 {
@@ -60,6 +223,10 @@ body {
   padding: 16px;
 }
 
+#about h1 {
+  text-align: center;
+}
+
 #about #about-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -69,12 +236,12 @@ body {
 
 #skills {
   background-color: gray;
-  height: 100%;
+  height: 100vh;
 }
 
 #projects {
   background-color: black;
-  height: 100%;
+  height: 100vh;
 }
 
 #contact {
