--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,11 @@
+/* CSS Normalize */
+article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block;}audio,canvas,video{display:inline-block;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2em;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:700;}dfn{font-style:italic;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace, serif;font-size:1em;}pre{white-space:pre-wrap;word-wrap:break-word;}q{quotes:\201C \201D \2018 \2019;}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-.5em;}sub{bottom:-.25em;}img{border:0;}svg:not(:root){overflow:hidden;}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,html input[type=button],/* 1 */
+input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}button[disabled],input[disabled]{cursor:default;}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0;}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}body,figure{margin:0;}legend,button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
+
+/* Box-sizing border-box */
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+
 *, *::before, *::after {
         box-sizing: border-box;
         text-decoration: none;
@@ -11,17 +19,19 @@ body{
     color: #D5DCE0;
 }
 
-#wrapper-nav{
-    width: 100%;
-    background-color: #082333;
-    top: 0;
-    position: fixed;
-    z-index: 2;
+
     #navbar{
+        display: flex;
         width: 100%;
+        background-color: #082333;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 2;
+        top: 0;
+        position: fixed;
         ul{
             display: flex;
-            justify-content: flex-end;
+
             li{
                 list-style: none;
                 padding: 4px 16px 4px 8px;
@@ -33,18 +43,20 @@ body{
             }
         }
     }
-}
 
 #welcome-section{
     padding: 16px;
     text-align: center;
-    height: 100%;
+    height: 100vh;
     h1{
         margin-top: 200px;
         margin-bottom: 200px;
     }
 }
 #about{
+    h1{
+        text-align: center;
+    }
     padding: 16px;
     #about-wrap{
         display: flex;
@@ -60,11 +72,11 @@ body{
 }
 #skills{
     background-color: gray;
-    height: 100%;
+    height: 100vh;
 }
 #projects{
     background-color: black;
-    height: 100%;
+    height: 100vh;
 
 }
 #contact{
