--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 /* Box-sizing border-box */
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
+$primary-color: #082333;
 
 *, *::before, *::after {
         box-sizing: border-box;
@@ -19,68 +20,3 @@ body{
     color: #D5DCE0;
 }
 
-
-    #navbar{
-        display: flex;
-        width: 100%;
-        background-color: #082333;
-        align-items: center;
-        justify-content: space-between;
-        z-index: 2;
-        top: 0;
-        position: fixed;
-        ul{
-            display: flex;
-
-            li{
-                list-style: none;
-                padding: 4px 16px 4px 8px;
-                a{
-                    text-decoration: none;
-                    font-weight: 700;
-                    color: #D5DCE0;
-                }
-            }
-        }
-    }
-
-#welcome-section{
-    padding: 16px;
-    text-align: center;
-    height: 100vh;
-    h1{
-        margin-top: 200px;
-        margin-bottom: 200px;
-    }
-}
-#about{
-    h1{
-        text-align: center;
-    }
-    padding: 16px;
-    #about-wrap{
-        display: flex;
-    width: 100%;
-    #about-me{
-
-    }
-    #about-img{
-
-    }
-    }
-    
-}
-#skills{
-    background-color: gray;
-    height: 100vh;
-}
-#projects{
-    background-color: black;
-    height: 100vh;
-
-}
-#contact{
-    background-color: green;
-    height: 100vh;
-
-}
